# trade-game

./: .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt
trade_game/: __init__.py  config.py  experiment_plots.py  grad_game.py  llm_game.py  objective.py  param_search.py  params.py  policy_helpers.py  scenarios.py
trade_game/io-final/CN2017/: gamma_cj.csv  gamma_ij.csv  metadata.json  rho_cj.csv
trade_game/io-final/CN2018/: gamma_cj.csv  gamma_ij.csv  metadata.json
trade_game/io-final/US2017/: gamma_cj.csv  gamma_ij.csv  metadata.json
trade_game/io-final/US2018/: gamma_cj.csv  gamma_ij.csv  metadata.json  rho_ij.csv
trade_game/runtime/: __init__.py  model.py  sim.py
