[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-game"
version = "0.1.0"
description = "Two-country multi-sector trade policy dynamic game experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "torch>=2.0",
    "matplotlib>=3.5",
    "openai>=1.0",
]

[tool.setuptools]
packages = ["trade_game", "trade_game.llm", "trade_game.runtime"]
include-package-data = true

[tool.setuptools.package-data]
trade_game = ["io-final/**/*.csv", "io-final/**/*.json"]
